2019-10-04  Martin Jambor  <mjambor@suse.cz>

	* tree-ssa-forwprop.c (simplify_builtin_call): Set gimple call
	fntype when switching to calling memcpy instead of memset.

2019-10-04  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* hash-table.h (hash_table::empty_slow): Don't assign
	size_t values to int variables.

2019-10-04  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* expr.c (convert_mode_scalar): Remove shadowing local var.
	(emit_block_move): Rename local vars.
	(block_move_libcall_safe_for_call_parm): Remove shadowing local var.
	(emit_push_insn): Rename local vars.
	(expand_assignment): Fix wrong mode in assign_stack_temp.  Remove
	shadowing local vars.
	(store_constructor): Remove shadowing local vars.  Rename local var.
	(store_field, expand_cond_expr_using_cmove,
	expand_expr_real_2): Remove shadowing local vars.
	(expand_expr_real_1,
	do_store_flag): Remove shadowing local vars.  Rename local vars.

2019-10-04  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* cgraph.h (FOR_EACH_ALIAS): Avoid shadowing the loop variable.

2019-10-04  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	* genmatch.c (commutate): Rename local var.
	(lower_cond): Reuse local var.
	(dt_node::gen, dt_node::gen_kids, dt_node::gen_kids_1,
	dt_operand::gen, dt_operand::gen_gimple_expr,
	dt_simplify::gen): Add a param.  Rename generated vars.
	(decision_tree::insert_operand,
	(capture_info::walk_match, capture_info::walk_result,
	capture_info::walk_c_expr): Rename local vars.
	(expr::gen_transform): Rename generated vars.
	Use snprintf.  Rename local vars.
	(capture::gen_transform, dt_operand::get_name,
	dt_operand::gen_opname): Rename generated vars.
	(write_predicate): Adjust call to gen_kids.
	(parser::get_internal_capture_id): Rename generated vars.
	(parser::parse_expr): Rename local vars.
	(parser::parse_if): Remove local var.
	(parser::parse_pattern, add_operator): Rename local vars.

2019-10-04  Joseph Myers  <joseph@codesourcery.com>
